styles/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/**
* Minimal reset
*/

/* Box sizing rules */
*,
*::before,
*::after {
  box-sizing: border-box;
}

/* Prevent font size inflation */
html {
  /* Adjustment so that reloading the page with #<id> scrolls to a nice position */
  --top-padding: 64px;
  box-sizing: border-box;
  -moz-text-size-adjust: none;
  -webkit-text-size-adjust: none;
  text-size-adjust: none;
  scroll-behavior: smooth;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  scroll-padding-top: var(--top-padding);
}

/* Remove default margin in favour of better control in authored CSS */
body, h1, h2, h3, h4, p,
figure, blockquote, dl, dd {
  margin-block-end: 0;
}

/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
ul[role='list'],
ol[role='list'] {
  list-style: none;
}

/* Set core body defaults */
body {
  overscroll-behavior: none;
  min-height: 100vh;
  margin: 0;
  line-height: 1.5;
}

/* Set shorter line heights on headings and interactive elements */
h1, h2, h3, h4,
button, input, label {
  line-height: 1.1;
}

/* Balance text wrapping on headings */
h1, h2,
h3, h4 {
  text-wrap: balance;
}

/* A elements that don't have a class get default styles */
a:not([class]) {
  text-decoration-skip-ink: auto;
  color: currentColor;
}

/* Make images easier to work with */
img,
picture {
  max-width: 100%;
  height: auto;
  display: block;
}

/* Inherit fonts for inputs and buttons */
input, button,
textarea, select {
  font-family: inherit;
  font-size: inherit;
}

/* Make sure textareas without a rows attribute are not tiny */
textarea:not([rows]) {
  min-height: 10em;
}

/* Anything that has been anchored to should have extra scroll margin */
:target {
  scroll-margin-block: 5ex;
}

.dot-bg {
  border-top: 16px solid white;
  background-image: radial-gradient(
    circle at 1px 1px,
    #c4c4c4 1px,
    transparent 0
  );
  background-size: 32px 32px;
}

/* OLD STYLES */

.docs-content h1,
.docs-content h2,
.docs-content h3,
.docs-content h4 {
  @apply font-semibold relative;
}

.docs-content h2 {
  @apply text-xl lg:text-2xl;
}

.docs-content h2:not(:first-child) {
  @apply mt-4 pt-4;
}

.docs-content figcaption {
  @apply text-center text-sm italic text-gray-700 dark:text-gray-300 mx-auto mb-4 lg:mb-6 max-w-prose;
}

.breadcrumbs {
  @apply flex flex-wrap list-none;
}

.breadcrumb-item {
  @apply text-sm text-gray-500 dark:text-gray-300;
}

.breadcrumb-item + .breadcrumb-item:before {
  @apply inline-block pr-2;
  content: "\203A";
}

.breadcrumb-item + .breadcrumb-item {
  @apply pl-2;
}

.lg\:prose a {
  @apply text-brand;
}

.after\:hash {
  content: "#";
}

.docs-content .container {
  @apply flex flex-row my-8;
}

.docs-content .left-panel {
  @apply flex-1 mr-3;
}

.docs-content .left-panel h2 {
  @apply mt-0 pt-0 md:pt-0 md:mt-0;
}

.docs-content .right-panel {
  @apply ml-auto flex-1;
}

.docs-content .right-panel h4:first-child {
  @apply mt-0 pt-0 md:pt-0 md:mt-0;
}

.api-docs-content h3 {
  @apply mb-2;
}

/* .api-docs-example .code-block,
.api-docs-example .endpoints {
  @apply mb-5;
}

*/
.api-docs-example .code-block {
  font-size: 13px;
}

/* For callouts and cards to allow styling */

.not-prose ol {
  list-style-type: decimal; /* Ensures that numbers are visible */
  margin-left: 8px; /* Adds some margin for indentation */
  padding-left: 8px; /* Optional: Additional padding if needed */
}

.section-heading > a:last-child:before {
  content: "#";
  opacity: 0;
  transition: opacity 150ms cubic-bezier(0.4, 0, 0.2, 1);
}
.section-heading:hover > a:last-child:before {
  opacity: 0.3;
}
.section-heading > a:last-child:hover:before {
  opacity: 0.6;
}

.task-list-item {
  padding-left: 0 !important;
}

.task-list-item > input {
  margin-right: 8px;
}

.task-list-item:before {
  display: none !important;
}

.task-list-item > *:first-child {
  margin-top: 0 !important;
}

.task-list-item > *:last-child {
  margin-top: 0 !important;
}

.prose-sm ol {
  list-style-type: decimal;
}

.prose-sm ul {
  list-style-type: disc;
}

.schema-property-description p {
  margin-top: 0 !important;
}

.schema-property-description p:last-child {
  margin-bottom: 0 !important;
}

.schema-property-description code {
  font-size: 11px;
}

.sidebar .active a {
  @apply text-brand font-medium;
}

.sidebar .sidebar-subsection.sidebar-subsection--active {
  display: block!important;
}
/*
Algolia overrides
Need the css for focus management but they append theming, which we don't want
*/
.aa-Form {
  border: 0.5px solid var(--tgph-gray-6) !important;
  border-radius: var(--tgph-rounded-2) !important;
}

.aa-Input {
  font: unset !important;
  font-size: 12px !important;
  height: auto !important;
}

